src/test/deca/context/invalid/classmethode8.deca
class A{
    int a;
    int methode(){
        return a;
    }
}

{
    A a=new A();
    a.methode;
    
}